# CLI-Password-Generator

./: README.md  pyproject.toml
genpass.egg-info/: SOURCES.txt
genpass/genpass/: __main__.py
week1-tasks/genpass/genpass/: generate.py
week1-tasks/genpass/genpass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
